5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1650_2449.log
== TEST (2019-04-14 21:56:44) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))
x = (c*e) - (b*f) / (a*e) - (b*d)
y = (a*f) - (c*d) / (a*e) - (b*d)
z = x, y
if z/2 = 0:
	print(x)
	print(y)
else:
	print("Nao tem solucao")
	
-- ERROR:
File "XXXX", line 10
    if z/2 = 0:
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:56:55) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))
x = (c*e) - (b*f) / (a*e) - (b*d)
y = (a*f) - (c*d) / (a*e) - (b*d)
z = x, y
if z/2 == 0:
	print(x)
	print(y)
else:
	print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if z/2 == 0:
TypeError: unsupported operand type(s) for /: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:57:14) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))
x = (c*e) - (b*f) / (a*e) - (b*d)
y = (a*f) - (c*d) / (a*e) - (b*d)
z = x, y
if z/2 == 0:
	print(x)
	print(y)
else:
	print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if z/2 == 0:
TypeError: unsupported operand type(s) for /: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:57:40) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))
x = (c*e) - (b*f) / (a*e) - (b*d)
y = (a*f) - (c*d) / (a*e) - (b*d)
z = x, y
if z > 0:
	print(x)
	print(y)
else:
	print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if z > 0:
TypeError: '>' not supported between instances of 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:57:44) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))
x = (c*e) - (b*f) / (a*e) - (b*d)
y = (a*f) - (c*d) / (a*e) - (b*d)
z = x, y
if z > 0:
	print(x)
	print(y)
else:
	print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if z > 0:
TypeError: '>' not supported between instances of 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:58:10) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))
x = (c*e) - (b*f) / (a*e) - (b*d)
y = (a*f) - (c*d) / (a*e) - (b*d)
z = x and y
if z > 0:
	print(x)
	print(y)
else:
	print("Nao tem solucao")
	
-- OUTPUT:
18.799999999999997
18.799999999999997
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:58:27) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))
x = (c*e) - (b*f) / (a*e) - (b*d)
y = (a*f) - (c*d) / (a*e) - (b*d)
z = x and y
if z == 0:
	print(x)
	print(y)
else:
	print("Nao tem solucao")
	
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:58:33) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))
x = (c*e) - (b*f) / (a*e) - (b*d)
y = (a*f) - (c*d) / (a*e) - (b*d)
z = x and y
if z == 0:
	print(x)
	print(y)
else:
	print("Nao tem solucao")
	
-- EXECUTION TIME:
0.140631
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
Nao tem solucao
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
Nao tem solucao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:58:40) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))
x = (c*e) - (b*f) / (a*e) - (b*d)
y = (a*f) - (c*d) / (a*e) - (b*d)
z = x and y
if z == 0:
	print(x)
	print(y)
else:
	print("Nao tem solucao")
	
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:58:56) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))
x = (c*e) - (b*f) / (a*e) - (b*d)
y = (a*f) - (c*d) / (a*e) - (b*d)
if x/y == 0:
	print(x)
	print(y)
else:
	print("Nao tem solucao")
	
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:59:02) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))
x = (c*e) - (b*f) / (a*e) - (b*d)
y = (a*f) - (c*d) / (a*e) - (b*d)
if x/y == 0:
	print(x)
	print(y)
else:
	print("Nao tem solucao")
	
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:59:26) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))
x = (c*e) - (b*f) / (a*e) - (b*d)
y = (a*f) - (c*d) / (a*e) - (b*d)
if x + y/2 == 0:
	print(x)
	print(y)
else:
	print("Nao tem solucao")
	
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:59:33) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))
x = (c*e) - (b*f) / (a*e) - (b*d)
y = (a*f) - (c*d) / (a*e) - (b*d)
if x + y/2 == 0:
	print(x)
	print(y)
else:
	print("Nao tem solucao")
	
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:01:12) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))
x = (c*e) - (b*f) 
x1 = (a*e) - (b*d)
xx = x / x1
y = (a*f) - (c*d) 
y1 = (a*e) - (b*d)
yy = y / y1
if x1 > 0:
	print(xx)
	print(yy)
else:
	print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    xx = x / x1
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:01:23) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))
x = (c*e) - (b*f) 
x1 = (a*e) - (b*d)
xx = x / x1
y = (a*f) - (c*d) 
y1 = (a*e) - (b*d)
yy = y / y1
if x1 > 0:
	print(xx)
	print(yy)
else:
	print("Nao tem solucao")
	
-- EXECUTION TIME:
0.141838
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2449/main.py", line 9, in <module>
    xx = x / x1
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:01:26) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))
x = (c*e) - (b*f) 
x1 = (a*e) - (b*d)
xx = x / x1
y = (a*f) - (c*d) 
y1 = (a*e) - (b*d)
yy = y / y1
if x1 > 0:
	print(xx)
	print(yy)
else:
	print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    xx = x / x1
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:01:45) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))
x = (c*e) - (b*f) 
x1 = (a*e) - (b*d)
xx = x / x1
y = (a*f) - (c*d) 
y1 = (a*e) - (b*d)
yy = y / y1
if x1 >= 0:
	print(xx)
	print(yy)
else:
	print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    xx = x / x1
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:01:50) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))
x = (c*e) - (b*f) 
x1 = (a*e) - (b*d)
xx = x / x1
y = (a*f) - (c*d) 
y1 = (a*e) - (b*d)
yy = y / y1
if x1 >= 0:
	print(xx)
	print(yy)
else:
	print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    xx = x / x1
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:02:06) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))
x = (c*e) - (b*f) 
x1 = (a*e) - (b*d)
xx = x / x1
y = (a*f) - (c*d) 
y1 = (a*e) - (b*d)
yy = y / y1
if x1, x2 >= 0:
	print(xx)
	print(yy)
else:
	print("Nao tem solucao")
	
-- ERROR:
File "XXXX", line 13
    if x1, x2 >= 0:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:13:18) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))
denominador = (a*e) - (b*d)

if m !=  0:
	print((c*e) - (b*f) / denominador)
	print((a*f) - (c*d) / denominador)
else:
	print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if m !=  0:
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:13:30) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))
denominador = (a*e) - (b*d)

if denominador !=  0:
	print((c*e) - (b*f) / denominador)
	print((a*f) - (c*d) / denominador)
else:
	print("Nao tem solucao")
	
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:14:12) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))
denominador = (a*e) - (b*d)

if denominador !=  0:
	print((c*e) - (b*f) / (a*e) - (b*d))
	print((a*f) - (c*d) / (a*e) - (b*d))
else:
	print("Nao tem solucao")
	
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:14:36) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))
denominador = (a*e  - b*d)

if denominador !=  0:
	print((c*e - b*f) / (a*e - b*d))
	print((a*f - c*d) / (a*e - b*d))
else:
	print("Nao tem solucao")
	
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:14:42) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))
denominador = (a*e  - b*d)

if denominador !=  0:
	print((c*e - b*f) / (a*e - b*d))
	print((a*f - c*d) / (a*e - b*d))
else:
	print("Nao tem solucao")
	
-- EXECUTION TIME:
0.203297
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
